Add test to SwapNodes

--- a/swapNodes/BUILD
+++ b/swapNodes/BUILD
@@ -1,5 +1,13 @@
 java_library(
     name = "SwapNodes",
     srcs = ["SwapNodes.java"],
-    deps = ["//linkedList:LinkedListNode"],
+    deps = ["//linkedList:LinkedListNode", 
+            "//linkedList:LinkedList"],
+)
+
+java_test(
+    name = "TestSwapNodes",
+    srcs = ["TestSwapNodes.java"],
+    deps = [":SwapNodes", "//linkedList:LinkedList", "//linkedList:LinkedListNode"],
+    test_class = "testSwapNodes.TestSwapNodes",
 )
